Ajustado funcionalidade de salvar para redirecionar para tela de lista após salvar

--- a/src/app/pages/singin/singin.component.html
+++ b/src/app/pages/singin/singin.component.html
@@ -9,7 +9,7 @@
                 <div class="col-12 pt-3 px-4 bg-white">
                   <h4 class="card-title mb-2">Entrar</h4>
                   <p class="card-text mb-3">
-                    Bem-vindo de volta, por favor, faça login na sua conta.
+                    Bem-vindo! Faça login na sua conta.
                   </p>
                   <div class="mb-2 d-sm-none d-md-none d-lg-none float-right">
                     <a [routerLink]="['/singup']">Primeira vez por aqui?</a>
